--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,19 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "google-libphonenumber": "^3.2.34",
+    "intl-tel-input": "^17.0.3",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
