--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/moment-timezone": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.11",
     "apexcharts": "^3.53.0",
     "bootstrap": "^5.3.3",
@@ -37,6 +38,8 @@
     "canvas-confetti": "^1.9.2",
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^17.0.3",
+    "luxon": "^3.5.0",
+    "moment-timezone": "^0.5.45",
     "ng-apexcharts": "^1.12.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-intl-tel-input": "^3.2.0",
