--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "ng-apexcharts": "^1.12.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-intl-tel-input": "^3.2.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-simple-text-editor": "^5.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.1",
