--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.15",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
